--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -2,6 +2,9 @@
 name = "tracker"
 version = "0.1.0"
 description = "Minimal FastAPI backend"
+authors = [
+    {name = "Gleb Morgachev", email = "morgachev.g@gmail.com"}
+]
 requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.104.0",
@@ -9,6 +12,9 @@ dependencies = [
     "httpx>=0.27.0",
     "aiosqlite>=0.19.0",
 ]
+
+[project.urls]
+Repository = "https://github.com/gonka-ai/gonka-tracker"
 
 [project.optional-dependencies]
 dev = [
