--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,14 @@
   "name": "tracker-frontend",
   "version": "0.1.0",
   "type": "module",
+  "author": {
+    "name": "Gleb Morgachev",
+    "email": "morgachev.g@gmail.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gonka-ai/gonka-tracker"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
