--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "uvicorn[standard]>=0.24.0",
     "httpx>=0.27.0",
     "aiosqlite>=0.19.0",
+    "bech32>=1.2.0",
 ]
 
 [project.urls]
