inference data, fix for timeline per epoch

--- a/config.env.template
+++ b/config.env.template
@@ -5,3 +5,12 @@ CACHE_DB_PATH=cache/cache.db
 
 HTTPS_PORT=443
 
+POLL_CURRENT_EPOCH_INTERVAL=30
+POLL_JAIL_STATUS_INTERVAL=120
+POLL_NODE_HEALTH_INTERVAL=60
+POLL_REWARDS_INTERVAL=60
+POLL_WARM_KEYS_INTERVAL=300
+POLL_HARDWARE_NODES_INTERVAL=600
+POLL_EPOCH_TOTAL_REWARDS_INTERVAL=600
+POLL_PARTICIPANT_INFERENCES_INTERVAL=600
+
