--- a/config.env.template
+++ b/config.env.template
@@ -13,4 +13,5 @@ POLL_WARM_KEYS_INTERVAL=300
 POLL_HARDWARE_NODES_INTERVAL=600
 POLL_EPOCH_TOTAL_REWARDS_INTERVAL=600
 POLL_PARTICIPANT_INFERENCES_INTERVAL=600
+POLL_MODELS_API_INTERVAL=300
 
