--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
