--- a/config.env.template
+++ b/config.env.template
@@ -14,4 +14,5 @@ POLL_HARDWARE_NODES_INTERVAL=600
 POLL_EPOCH_TOTAL_REWARDS_INTERVAL=600
 POLL_PARTICIPANT_INFERENCES_INTERVAL=600
 POLL_MODELS_API_INTERVAL=300
+POLL_TIMELINE_INTERVAL=30
 
