--- a/config.env.template
+++ b/config.env.template
@@ -10,7 +10,9 @@ POLL_JAIL_STATUS_INTERVAL=120
 POLL_NODE_HEALTH_INTERVAL=60
 POLL_REWARDS_INTERVAL=60
 POLL_WARM_KEYS_INTERVAL=300
+POLL_WARM_KEYS_BATCH_SIZE=10
 POLL_HARDWARE_NODES_INTERVAL=600
+POLL_HARDWARE_NODES_BATCH_SIZE=10
 POLL_EPOCH_TOTAL_REWARDS_INTERVAL=600
 POLL_PARTICIPANT_INFERENCES_INTERVAL=600
 POLL_MODELS_API_INTERVAL=300
